--- a/frontend/src/app/pages/user-administration/detail/user-administration/user-administration.component.html
+++ b/frontend/src/app/pages/user-administration/detail/user-administration/user-administration.component.html
@@ -3,5 +3,7 @@
 </ng-container>
 
 <ng-template #create>
-  <app-user-administration-create></app-user-administration-create>
+  <div [style.min-height]="'550px'">
+    <app-user-administration-create></app-user-administration-create>
+  </div>
 </ng-template>
