--- a/frontend/src/app/core/components/table-search/table-search.component.html
+++ b/frontend/src/app/core/components/table-search/table-search.component.html
@@ -22,13 +22,18 @@
   </div>
   <div class="search-row">
     <div *ngIf="displayBusinessOrganisationSearch" class="d-flex flex-column col-3">
-      <bo-select
-        (selectedBusinessOrganisationChanged)="businessOrganisationChanged($event)"
-        [formGroup]="boSearchForm"
-        [formModus]="false"
-        controlName="businessOrganisation"
+      <span class="font-bold-lg">{{
+        'BODI.BUSINESS_ORGANISATION.BUSINESS_ORGANISATION' | translate
+      }}</span>
+      <atlas-search-select
+        (selectionChange)="businessOrganisationChanged($event)"
+        [selectedItem]="selectedBusinessOrganisation$ | async"
+        type="businessOrganisation"
       >
-      </bo-select>
+        <ng-template let-item>
+          {{ item | boSelectionDisplay }}
+        </ng-template>
+      </atlas-search-select>
     </div>
     <ng-container [ngTemplateOutlet]="additionalFieldTemplate"></ng-container>
     <div *ngIf="displayStatus" class="d-flex flex-column col-3">
