--- a/frontend/src/app/core/components/table-search/table-search.component.scss
+++ b/frontend/src/app/core/components/table-search/table-search.component.scss
@@ -1,56 +1,52 @@
 @use 'src/styles/variables' as variables;
 
-//:host::ng-deep {
-//  /* TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version. */
-//  /* TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version. */
-//  mat-form-field mat-chip-list .mat-chip-list-wrapper {
-//    margin-right: unset !important;
-//    padding-left: 0.3rem;
-//    /* TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version. */
-//    mat-chip {
-//      min-height: 20px;
-//      padding: 0 7px;
-//      margin: 1px 2px;
-//    }
-//  }
-//
-//  .mat-mdc-standard-chip {
-//    height: unset !important;
-//    word-break: break-all;
-//    max-width: 90%;
-//  }
-//
-//  /* TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version. */
-//  .search-box .mat-form-field-appearance-outline .mat-form-field-outline {
-//    background-color: variables.$gray-50;
-//    border-radius: 5px;
-//  }
-//}
-
 .search-main-field {
   border: 1px solid variables.$primary-400;
   background-color: variables.$gray-50;
   border-radius: 5px;
   min-height: 50px;
+  padding-left: 1rem;
 
   &:focus-within,
   &:hover {
     outline: 3px solid variables.$primary-400;
   }
+
+  input {
+    margin-left: 8px;
+    margin-top: 6px;
+  }
+
+  i.bi-search {
+    margin-top: 8px;
+    margin-left: 8px;
+    float: right;
+  }
+
+  mat-chip-grid {
+    margin-left: 8px;
+    margin-top: 4px;
+
+    mat-chip-row {
+      margin: 1px 2px;
+      height: 22px;
+
+      i {
+        font-size: 15px;
+      }
+    }
+  }
 }
 
-input {
-  margin-left: 8px;
-  margin-top: 6px;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
 }
 
-i.bi-search {
-  margin-top: 8px;
-}
-
-mat-chip-grid {
-  margin-left: 8px;
-  margin-top: 4px;
+.form-style {
+  display: flex;
 }
 
 .search-row {
