--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -19,6 +19,7 @@
 @use 'atlas-components/atlas-snack-bar';
 @use 'atlas-components/mat-label';
 @use 'atlas-components/mat-paginator';
+@use 'atlas-components/atlas-search-multi-select';
 
 // /am-components includes
 @use 'am-components/mat-tab';
