Revert "ATLAS-1115: wip: integrate atlas-search-select, todo: a part of functionality, validation errors on atlas-search-select, sboidRestrictions"
This reverts commit 552184c2591264fb3c1546cc91defb6072e319b4.

--- a/frontend/src/app/core/components/table-search/table-search.component.html
+++ b/frontend/src/app/core/components/table-search/table-search.component.html
@@ -27,18 +27,13 @@
   </div>
   <div class="search-row">
     <div *ngIf="displayBusinessOrganisationSearch" class="d-flex flex-column col-3">
-      <span class="font-bold-lg">{{
-        'BODI.BUSINESS_ORGANISATION.BUSINESS_ORGANISATION' | translate
-      }}</span>
-      <atlas-search-select
-        (selectionChange)="businessOrganisationChanged($event)"
-        [selectedItem]="selectedBusinessOrganisation$ | async"
-        type="businessOrganisation"
+      <bo-select
+        (selectedBusinessOrganisationChanged)="businessOrganisationChanged($event)"
+        [formGroup]="boSearchForm"
+        [formModus]="false"
+        controlName="businessOrganisation"
       >
-        <ng-template let-item>
-          {{ item | boSelectionDisplay }}
-        </ng-template>
-      </atlas-search-select>
+      </bo-select>
     </div>
     <ng-container [ngTemplateOutlet]="additionalFieldTemplate"></ng-container>
     <div *ngIf="displayStatus" class="d-flex flex-column col-3">
