--- a/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.scss
+++ b/frontend/src/app/pages/bodi/transport-companies/detail/transport-company-detail.component.scss
@@ -1,5 +1,5 @@
 @use 'src/styles/variables' as variables;
 
-.relation-form-height {
-  height: 400px;
+.mat-label-subtitle-form-field-space-between {
+  margin-bottom: 18px;
 }
