--- a/frontend/src/app/pages/user-administration/overview/user-administration-overview.component.html
+++ b/frontend/src/app/pages/user-administration/overview/user-administration-overview.component.html
@@ -45,30 +45,26 @@
           <div class="mb-1">
             <mat-label class="font-bold-lg">{{ 'USER_ADMIN.TABLE_HEADER' | translate }}</mat-label>
           </div>
-          <!-- todo: add functionality -->
-          <atlas-search-select
+          <app-user-select
+            [searchResults$]="userSearchResult$"
             (selectionChange)="checkIfUserExists($event)"
-            type="userAdministration"
+            (valueChanged)="userSearchResult$ = userService.searchUsers($event)"
           >
             <ng-template let-item>
               {{ item | userSelectFormat }}
             </ng-template>
-          </atlas-search-select>
+          </app-user-select>
         </ng-container>
 
         <ng-template #filterTemplate>
           <div class="d-flex flex-row">
-            <div class="d-flex flex-column col-6 pe-1">
-              <span class="font-bold-lg">{{
-                'BODI.BUSINESS_ORGANISATION.BUSINESS_ORGANISATION' | translate
-              }}</span>
-              <!-- todo: add functionality -->
-              <atlas-search-select (selectionChange)="filterChanged()" type="businessOrganisation">
-                <ng-template let-item>
-                  {{ item | boSelectionDisplay }}
-                </ng-template>
-              </atlas-search-select>
-            </div>
+            <bo-select
+              class="col-6 pe-1"
+              [formGroup]="boForm"
+              [controlName]="boSearchCtrlName"
+              [formModus]="false"
+              (boSelectionChanged)="filterChanged()"
+            ></bo-select>
 
             <div class="d-flex flex-column col-6 ps-1">
               <mat-label class="font-bold-lg">{{
