--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -22,6 +22,8 @@
 @use 'atlas-components/atlas-search-multi-select';
 
 // /am-components includes
+
 @use 'am-components/mat-tab';
 @use 'am-components/mat-table';
+@use 'am-components/ng-select';
 @use 'am-components/mat-dialog';
