--- a/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
+++ b/frontend/src/app/pages/lidi/sublines/detail/subline-detail.component.html
@@ -71,8 +71,7 @@
       <div class="d-flex flex-column col-4">
         <div class="mainline-container d-flex col-12">
           <div class="mainline-select d-flex flex-column">
-            <!-- todo: atlas-search-select for mainline -->
-            <!--<form-search-select
+            <form-search-select
               (searchTrigger)="searchMainlines($event)"
               [bindValueInp]="'slnid'"
               [controlName]="mainlineSlnidFormControlName"
@@ -87,7 +86,7 @@
               <ng-template #labelOptionTemplates let-item>
                 {{ item | mainlineSelectOption }}
               </ng-template>
-            </form-search-select>-->
+            </form-search-select>
           </div>
           <div class="mainline-link d-flex flex-column">
             <a [attr.href]="mainlineUrl()" target="_blank">
@@ -122,19 +121,13 @@
     </div>
 
     <div class="col-12 d-flex">
-      <div class="d-flex flex-column col-6 pe-3 height-bo-select">
-        <!-- todo: sboidRestrictions -->
-        <atlas-search-select
-          [formCtrl]="form.get('businessOrganisation')"
-          [selectedItem]="selectedBusinessOrganisation$ | async"
-          (selectionChange)="onBusinessOrganisationChange($event)"
-          formTemplateLabelKey="businessOrganisationSearchSelectLabel"
-          type="businessOrganisation"
-        >
-          <ng-template let-item>
-            {{ item | boSelectionDisplay }}
-          </ng-template>
-        </atlas-search-select>
+      <div class="d-flex flex-column col-6 pe-3">
+        <bo-select
+          [formGroup]="form"
+          [sboidsRestrictions]="getBoSboidRestriction()"
+          controlName="businessOrganisation"
+          data-cy="businessOrganisation"
+        ></bo-select>
       </div>
 
       <div class="d-flex flex-column col-3 pe-3">
