--- a/frontend/src/app/pages/user-administration/detail/create/user-administration-create.component.html
+++ b/frontend/src/app/pages/user-administration/detail/create/user-administration-create.component.html
@@ -11,11 +11,7 @@
   }}</mat-label>
   <mat-label class="font-regular-sm">{{ 'FORM.FOR_EXAMPLE' | translate }} u123456</mat-label>
 </div>
-<atlas-search-select (selectionChange)="selectUser($event)" type="userAdministration">
-  <ng-template let-item>
-    {{ item | userSelectFormat }}
-  </ng-template>
-</atlas-search-select>
+<app-user-select (selectionChange)="selectUser($event)"></app-user-select>
 <p *ngIf="userHasAlreadyPermissions" class="color-error">
   {{ 'USER_ADMIN.SELECTED_USER_HAS_ALREADY_PERMISSIONS' | translate }}
 </p>
